--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -274,5 +274,10 @@
             android:entryValues="@array/pref_mms_message_font_size_values"
             android:dialogTitle="@string/pref_dialogtitle_mms_message_font_size" />
 
+        <CheckBoxPreference android:key="new_sms_wakelock"
+            android:title="@string/pref_title_wake_screen_on_incoming_sms"
+            android:summary="@string/pref_summary_wake_screen_on_incoming_sms"
+            android:defaultValue="false" />
+
     </PreferenceCategory>
 </PreferenceScreen>
