--- a/res/layout/message_list_item_recv.xml
+++ b/res/layout/message_list_item_recv.xml
@@ -78,7 +78,7 @@
                         android:layout_height="wrap_content"
                         android:paddingRight="3dip"
                         android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textColor="@color/timestamp_color" />
+                        android:textColor="@color/text_hairline" />
 
                     <ImageView
                         android:id="@+id/locked_indicator"
